<resources>
    <string name="app_name">开心果</string>
    <string name="app_Loding">拼命加载中…</string>
    <string name="device_online_text">在线</string>
    <string name="device_offline_text">离线</string>
    <string name="dialogMessage">正在加载中...</string>
    <string name="pawws">忘记密码</string>
    <string name="register">注册</string>
    <string name="Login_AccountHint">账号</string>
    <string name="Login_Immediately_Experience">立即体验</string>
    <string name="Login_AccountDoesNotExist">用户不存在或密码错误</string>
    <string name="Login_Failure">登录失败</string>
    <string name="Login_PasswordHint">密码</string>
    <string name="Login_LoginIn">登录</string>
    <string name="Login_Loding">正在登录中…</string>
    <string name="Login_Account_Empty">请输入用户名</string>
    <string name="Login_Password_Empty">请输入密码</string>
    <string name="login_forgot_pwd_text">忘记密码</string>
    <string name="login_register_text">注册</string>
    <string name="login_text">登录</string>
    <string name="login_name_text">用户名</string>
    <string name="login_password_text">密码</string>
    <string name="ChangePassword_Title">修改密码</string>
    <string name="ChangePassword_OldPassword">旧密码</string>
    <string name="ChangePassword_OldPasswordError">旧密码错误</string>
    <string name="ChangePassword_NewPassword">新密码</string>
    <string name="ChangePassword_ConfirmPassword">确认密码</string>
    <string name="ChangePassword_Tips_OldPasswordEmpty">请输入旧密码</string>
    <string name="ChangePassword_Tips_NewPasswordEmpty">请输入新密码</string>
    <string name="ChangePassword_Tips_ConfirmPasswordEmpty">请输入确认密码</string>
    <string name="ChangePassword_Tips_ConfirmPasswordError">两次输入密码不一致</string>
    <string name="ChangePassword_Tips_ChangePasswordFail">修改密码失败</string>
    <string name="ChangePassword_Tips_ChangePasswordSuccess">修改密码成功</string>
    <string name="Register_Title">注册账号</string>
    <string name="Register_Error">用户注册失败</string>
    <string name="Register_UserNameHint">用户名</string>
    <string name="Register_UserNameExist">用户名已被注册</string>
    <string name="Register_PasswordHint">密码</string>
    <string name="Register_PasswordAgainHint">确认密码</string>
    <string name="Register_PasswordError_Tips">两次输入的密码不相同,请重新输入!</string>
    <string name="Register_Email">邮箱</string>
    <string name="Register_UserName_Empty">请输入用户名</string>
    <string name="Register_Password_Empty">请输入密码</string>
    <string name="Register_PasswordAgain_Empty">请输入确认密码</string>
    <string name="Register_Email_Empty">请输入邮箱</string>
    <string name="Register_Success">注册成功,将为您自动登录</string>
    <string name="phoneIsEmpty">请输入手机号码</string>
    <string name="codeIsEmpty">验证码不能为空</string>
    <string name="passwordIsEmpty">密码不能为空</string>
    <string name="phoneError">请输入正确的手机号码</string>
    <string name="Network_Error">网络连接失败,请稍候再试</string>
    <string name="Email_Has_Been_Register">邮箱已注册过了</string>
    <string name="Second">秒</string>
    <string name="To_Resend">重新发送</string>
    <string name="Origin">我是起点</string>
    <string name="Hea_Portrait">头像</string>
    <string name="Add_Success">添加成功</string>
    <string name="Alter">修改</string>
    <string name="Delet_Success">删除成功</string>
    <string name="acb">广东省深圳市南山区深南科苑立交</string>
    <string name="Open_Position">开启定位</string>
    <string name="IMEI">请输入IMEI码</string>
    <string name="AddDevice_Scan">扫码</string>
    <string name="AddDevice_Input">输入</string>
    <string name="Geofence_Address">地址</string>
    <string name="Geofence_Scope">范围</string>
    <string name="Geofence_NameHint">输入安全区域名称</string>
    <string name="Geofence_AlarmType">方式</string>
    <string name="Geofence_AlarmType_In">进</string>
    <string name="Geofence_AlarmType_Out">出</string>
    <string name="Geofence_AlarmType_InOut">进出</string>
    <string name="role_addDevice_btn_text">保存并添加到联系人列表</string>
    <string name="AddDevice_ScanTips">请扫描手表的二维码,即可自动绑定设备</string>
    <string name="AddDevice_PleaseInput">请输入设备码</string>
    <string name="app_IMEI">设备IMEI码</string>
    <string name="app_Next">下一步</string>
    <string name="AddDevice_Tips">请确保手表插卡并且处于开机状态、SIM卡有效并且开通了gprs业务。</string>
    <string name="AddDevice_PleaseScan">请扫描设备码</string>
    <string name="Geofence_AddressNull">抱歉，未能找到结果</string>
    <string name="Geofence_Title">添加安全范围</string>
    <string name="edit_Geofence_Title">编辑安全范围</string>
    <string name="Geofence_Meter">米</string>
    <string name="Geofence_Radius">半径</string>
    <string name="Scan_Title">绑定手表</string>
    <string name="Scan_Failure">扫描失败</string>
    <string name="HomeMainFragment_LocationType0">未定位</string>
    <string name="HomeMainFragment_LocationType1">卫星定位</string>
    <string name="HomeMainFragment_LocationType2">基站定位</string>
    <string name="HomeMainFragment_LocationType3">WIFI定位</string>
    <string name="navi_tip">本功能为调起百度地图Android客户端（V5.0及以上版本）的导航功能，
        用户必须已安装百度地图客户端，如果没有安装则提示用户下载安装百度地图客户端。</string>
    <string name="before">前一天</string>
    <string name="calendar">今天</string>
    <string name="after">后一天</string>
    <string name="install_baidu_map">请安装百度地图</string>
    <string name="install_gaode">请安装高德地图</string>
    <string name="add_message">宝贝的资料</string>
    <string name="setting_succeed">\"设置成功,跳转到设备管理\"</string>
    <string name="to_obtain">获取中</string>
    <string name="babychat">宝贝的群聊</string>
    <string name="language_chat">语聊</string>
    <string name="Is_download_voice_click_later">Downloading the voice message, click later</string>
    <string name="dismiss">再按一次取消加载</string>
    <string name="watch_setting">手表设置</string>
    <string name="network_error">网络异常</string>
    <string name="service_timeout">等待服务器响应超时</string>
    <string name="server_is_busy">服务器繁忙</string>
    <string name="unknown_server_exception">未知的服务器异常</string>
    <string name="cannot_access_to_the_server">无法访问到服务器</string>
    <string name="user_does_not_exist">用户不存在</string>
    <string name="user_name_password_error">用户名或密码错误</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="send_fail">发送消息失败</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="error_send_invalid_content">你发送了不合法的消息内容</string>
    <string name="error_send_not_in_the_group">你已经不在此群了</string>
    <string name="send_message_success">发送消息成功</string>
    <string name="send_message_failed">发送消息失败</string>
    <string name="no_text_message">非文本消息</string>
    <string name="load_conversations_success">加载会话数据成功</string>
    <string name="you_are_group">你被群创建者从此群中移除</string>
    <string name="the_current_group_destroyed">当前群聊已被群创建者解散</string>
    <string name="no_more_messages">没有更多的消息了</string>
    <string name="prompt">提示</string>
    <string name="cancel">取消</string>
    <string name="ok">OK</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息</string>
    <string name="all_members">所有成员</string>
    <string name="CheckCode_Success">验证码发送成功</string>
    <string name="password_error">密码由6-16位数字字母组合</string>
    <string name="deit_password_success">修改成功</string>
    <string name="succeed">登录成功</string>
    <string name="tv_next">下一步</string>
    <string name="imei_empty">IMEI号不能为空</string>
    <string name="number_empty">请输入宝贝的电话号码</string>
    <string name="name_enpty">请输入宝贝的昵称,暂不支持特殊符号</string>
    <string name="birthday_null">请选择宝贝生日</string>
    <string name="relation_empty">请选择家长关系</string>
    <string name="baby_succeed">添加完成</string>
    <string name="watch_phone">手表号码</string>
    <string name="baby_name">宝贝昵称</string>
    <string name="baby_birthday">宝贝生日</string>
    <string name="parents_relationship">家长关系</string>
    <string name="enter_the_baby_nickname">请输入宝贝昵称</string>
    <string name="click_on_the_select_baby_birthday">点击选择宝贝生日</string>
    <string name="click_on_the_select_parents_relationship">点击选择家长关系</string>
    <string name="taking_pictures">拍照</string>
    <string name="the_system_image">系统照片</string>
    <string name="the_choice">选择关系</string>
    <string name="enter_the_phone_number">请输入您的手机号码</string>
    <string name="input_validation_code">输入您的验证码</string>
    <string name="enter_the_password">6-16位字母和数字</string>
    <string name="login">登录</string>
    <string name="confirm_password">确认密码</string>
    <string name="two_input_password_is_not_the_same">两次输入的密码不相同</string>
    <string name="manually_enter_the_mei_number">手动输入IMEI号</string>
    <string name="qr_code_inthe_setup_interface"><![CDATA[二维码在设置界面 > 绑定向导内找到]]></string>
    <string name="hold_down_the_talk">按住说话</string>
    <string name="phone">电话</string>
    <string name="small_talk">微聊</string>
    <string name="switch_baby">切换宝贝</string>
    <string name="the_new_baby">新增宝贝</string>
    <string name="baby">宝贝</string>
    <string name="baby_name_card">宝贝名片</string>
    <string name="watch_the_address_book">手表通讯录</string>
    <string name="alerts">消息通知</string>
    <string name="class_time">上课时间</string>
    <string name="call_setup">通话设置</string>
    <string name="setting">设置</string>
    <string name="hojy_company">深圳市华域无线技术股份有限公司.版本号V</string>
    <string name="exit">退出登录</string>
    <string name="automatic_answer">自动接听</string>
    <string name="intercept_the_stranger_calls">拦截陌生来电</string>
    <string name="one_way_listening">单向聆听</string>
    <string name="time_switch_machine">定时开关机</string>
    <string name="receive_push_message">接收推送消息</string>
    <string name="the_binding">解除与绑定</string>
    <string name="change_the_password">修改密码</string>
    <string name="clear_the_cache">清除缓存</string>
    <string name="check_the_update">检查更新</string>
    <string name="about">关于</string>
    <string name="please_open_the_right_to_send_voice">请开启权利才能发送语音</string>
    <string name="history">历史轨迹</string>
    <string name="the_safety_area">安全范围</string>
    <string name="add_the_safety_area">+添加安全范围</string>
    <string name="play_track">播放轨迹</string>
    <string name="time">时间:</string>
    <string name="address">地址:</string>
    <string name="was_over">播放完毕</string>
    <string name="the_editor">编辑</string>
    <string name="security_zone_radius">安全区域半径</string>
    <string name="address_name">地址名称</string>
    <string name="remind_the_way">提醒方式</string>
    <string name="in_this_type_safety_address_name">在此输入安全地址名称</string>
    <string name="enter_the_reminder">进入提醒</string>
    <string name="left_to_remind">离开提醒</string>
    <string name="exit_to_remind">进出提醒</string>
    <string name="sure_you_want_to_delete">确认要删除?</string>
    <string name="determine">确认</string>
    <string name="start_time">开始时间</string>
    <string name="select_class_time">请选择上课时间</string>
    <string name="The_end_of_time">结束时间</string>
    <string name="select_class_over_time">请选择下课时间</string>
    <string name="select_week">请选择星期</string>
    <string name="not_binding_equipment">无法绑定手表?</string>
    <string name="the_watch_has_binding_administrator">手表已绑定管理员,请向管理员申请添加</string>
    <string name="select_call">点我选择称呼</string>
    <string name="send_apply">发送申请</string>
    <string name="the_request_has_been_sent">请求已发送,请等待管理员处理</string>
    <string name="resend_apply">重新发送</string>
    <string name="open_the_camera_was_refused">打开照相机被拒绝,请手动输入IMEI号绑定手表,若要使用扫描功能,请在手机设置应用管理给予权限!</string>
    <string name="scan_watch_binding">扫描二维码，绑定手表</string>
    <string name="unbind_submit">移交管理员权限</string>
    <string name="unbind_all">解绑所有人</string>
    <string name="sms">短信邀请</string>
    <string name="select_clock_time">请选择闹钟时间</string>
    <string name="repeat">重复</string>
    <string name="weixin">微信邀请</string>
</resources>