<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/include_title"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="35dp">

            <TextView
                android:padding="12dp"
                android:textColor="@color/the_main_color"
                android:textSize="14sp"
                android:text="@string/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_time"
                android:gravity="center"
                android:hint="@string/select_clock_time"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:background="@color/white"
            android:id="@+id/select_week"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="12dp"
                android:textColor="@color/the_main_color"
                android:textSize="14sp"
                android:text="@string/repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_week"
                android:gravity="center"
                android:hint="@string/select_week"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/iv_regiht"
                android:layout_marginRight="15dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/regiht_"
                android:layout_width="16dp"
                android:layout_height="16dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>