<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <LinearLayout
        android:background="@color/white"
        android:id="@+id/class_time_morning"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >


        <TextView
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:text="@string/start_time"
            android:textSize="14sp"
            android:textColor="@color/the_main_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:hint="@string/select_class_time"
            android:id="@+id/tv_select_morning_time"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"></TextView>

        <ImageView
            android:id="@+id/iv_regiht"
            android:layout_marginRight="15dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/regiht_"
            android:layout_width="16dp"
            android:layout_height="16dp"/>

    </LinearLayout>
    <LinearLayout
        android:background="@drawable/edge_shape_white_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"

        >
        <View
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1"
            android:background="@color/text_main_color"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/class_over_time_morning"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >


        <TextView
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:text="@string/The_end_of_time"
            android:textSize="14sp"
            android:textColor="@color/the_main_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/tv_select_morning_over_time"
            android:hint="@string/select_class_over_time"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"></TextView>

        <ImageView
            android:layout_marginRight="15dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/regiht_"
            android:layout_width="16dp"
            android:layout_height="16dp"/>

    </LinearLayout>



</LinearLayout>