<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <!-- 吸引焦点用 -->
        <TextView
            android:id="@+id/tv_flag_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:focusable="true"
            android:focusableInTouchMode="true" />
        <SurfaceView
            android:id="@+id/preview_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"/>
        <zxing.view.ViewfinderView
            android:id="@+id/viewfinder_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <include layout="@layout/include_title"
                 android:id="@+id/include2"/>

        <TextView
            android:visibility="invisible"
            android:layout_alignParentBottom="true"
            android:id="@+id/scan_Tips"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:gravity="center"
            />

        <com.loybin.baidumap.ui.view.LastInputEditText
            android:phoneNumber="true"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:hint="@string/manually_enter_the_mei_number"
            android:padding="12dp"
            android:background="@drawable/et_shape_corners_tou_black_mask_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:textSize="14sp"
            android:maxLength="15"
            android:textColor="@color/the_main_color"
            android:textColorHint="@color/text_main_color"
            android:id="@+id/et_imei"
            android:layout_below="@+id/include2"
            android:layout_centerHorizontal="true"/>



        <TextView
            android:visibility="gone"
            android:id="@+id/tv_camera"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:textColor="@color/white"
            android:text="@string/open_the_camera_was_refused"
            android:layout_marginBottom="100dp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_binding_equipment"
            android:textColor="@color/Color_RecommandBackground"
            android:textSize="14sp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:text="@string/not_binding_equipment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:gravity="center"
            android:text="@string/qr_code_inthe_setup_interface"
            android:id="@+id/textView3"
            android:layout_above="@+id/tv_binding_equipment"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="25dp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:gravity="center"
            android:text="@string/AddDevice_ScanTips"
            android:layout_marginBottom="32dp"
            android:id="@+id/textView"
            android:layout_alignBottom="@+id/textView3"
            android:layout_toRightOf="@+id/tv_flag_title"
            android:layout_toEndOf="@+id/tv_flag_title"/>
    </RelativeLayout>


</FrameLayout>