<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/transparent"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:padding="5dp"
        android:background="@drawable/home_shape_corners_tou_black_mask_home"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <TextView
        android:background="@drawable/edge_shape_white_selector"
        android:gravity="center"
        android:textColor="@color/the_main_color"
        android:textSize="16sp"
        android:text="@string/sure_you_want_to_delete"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        >
        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1"
            android:background="@color/white"
            />

    </LinearLayout>
    <LinearLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_cancel"
            android:background="@drawable/cancel_shape_white_selector"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="44dp"/>

        <LinearLayout
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="36dp">

        <View
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:layout_width="1dp"
            android:layout_height="wrap_content"></View>
        </LinearLayout>
        <TextView
            android:id="@+id/determine"
            android:background="@drawable/confirm_shape_white_selector"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/determine"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="44dp"/>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>