<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <LinearLayout
        android:gravity="center_vertical"
        android:id="@+id/user_setting_photo"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        >
        <TextView
            android:background="@drawable/edge_shape_white_selector"
            android:textColor="@color/btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sms"
            android:textSize="14sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1"
            android:background="@color/text_main_color"
            />

    </LinearLayout>

    <LinearLayout
        android:gravity="center_vertical"
        android:id="@+id/user_weixin"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        >

        <TextView
            android:background="@drawable/edge_shape_white_selector"
            android:textColor="@color/btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/weixin"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1"
            android:background="@color/text_main_color"
            />

    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:id="@+id/user_setting_album"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <TextView
            android:background="@drawable/edge_shape_white_selector"
            android:textColor="@color/the_main_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1"
            android:background="@color/text_main_color"
            />

    </LinearLayout>



</LinearLayout>